# test-genesis

./: .gitignore  README.md  pyproject.toml
examples/: _OK_pbd_liquid.py  smoke.py
examples/locomotion/: go2_backflip.py  go2_env.py
examples/rendering/: _NG_demo.py  _OK_moving_camera.py  speed_test.py
examples/rigid/: _NG_apply_external_force_torque.py  _NG_grasp_bottle.py  _OK_control_franka.py  _OK_control_mesh.py  _OK_diffik_controller.py  _OK_gravity_compensation.py  _OK_ik_duck.py  _OK_ik_franka.py  _OK_ik_franka_batched.py  _OK_nonconvex_mesh.py  ik_shadow_hand.py
examples/tutorials/: advanced_hybrid_robot.py  advanced_muscle.py
