[project]
name = "test-genesis"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "flap1", email = "sho1seto@gmail.com" }
]
dependencies = [
    "genesis-world>=0.2.0",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "open3d-cpu>=0.18.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]

[tool.hatch.metadata]
allow-direct-references = true

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
type = "index"
